# udemy-clone-lite

./: DEEPWIKI.md  docker-compose.yml  package-lock.json
.github/workflows/: ci.yml  codeql.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  create_tables_once.py  init_sample_data.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  courses.py  enrollments.py  tags.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  course.py  curriculum.py  enrollment.py  review.py  tag.py  user.py
backend/app/db/: __init__.py  base.py  init_db.py  session.py
backend/app/models/: __init__.py  course.py  curriculum.py  enrollment.py  user.py
backend/app/schemas/: __init__.py  course.py  curriculum.py  enrollment.py  review.py  tag.py  token.py  user.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_courses.py  test_enrollments.py
backend/tests/api/v1/: test_curriculum.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/courses/: page.tsx
frontend/src/app/courses/[id]/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/tags/[slug]/: page.tsx
frontend/src/components/: course-card.tsx  header.tsx
frontend/src/contexts/: auth.tsx
frontend/src/lib/: api.ts
